<resources>
    <string name="app_name">Beautify</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--<string name="icon_youtube_play">{fa-youtube-play}</string>
    -->
    <string name="icon_youtube_play">{fa-play-circle}</string>
    <string name="icon_youtube_loader">{fa-circle-o-notch spin}</string>

    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="icon_home">{fa-home}</string>
    <string name="icon_notification">{fa-bell}</string>
    <string name="icon_myvideos">{fa-play-circle}</string>
    <string name="icon_tags">{fa-tags}</string>
    <string name="icon_search">{fa-search}</string>
    <string name="icon_sign_in">{fa-sign-in}</string>
    <string name="icon_like">{fa-thumbs-up}</string>
    <string name="icon_comments">{fa-comments}</string>
    <string name="icon_share">{fa-share-alt}</string>
    <string name="icon_favourite_empty">{fa-star-o}</string>
    <string name="icon_favourite_full">{fa-star}</string>
    <string name="facebook_app_id">703478709811393</string>

    <string name="fb_login_protocol_scheme">fb703478709811393</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="logout_facebook">Log Out</string>
    <string name="view_all">View All</string>
    <string name="see_all_text">See All</string>
    <string name="icon_empty_star">{fa-star-o}</string>
    <string name="icon_filled_star">{fa-star}</string>
    <string name="play_video">Play Video</string>
    <string name="comments">Comments</string>
    <string name="icon_video">{fa-video-camera}</string>
    <string name="see_more_ggs">... see more</string>
    <string name="see_less_ggs">see less</string>
</resources>
