<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar_color"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/back_button_selected"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="{fa-angle-left}"
            android:textColor="#ffffff"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/video_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/play_video"
            android:maxLines="1"
            android:textColor="#ffffff" />
    </LinearLayout>

    <com.google.android.youtube.player.YouTubePlayerView
        android:id="@+id/player"
        android:layout_below="@id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.youtube.player.YouTubePlayerView>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/player"
        android:layout_marginBottom="40dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="net.optimusbs.videoapp.fragments.VideoPlayerFragment">

            <!-- TODO: Update blank fragment layout -->


            <RelativeLayout
                android:id="@+id/titleLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/video_title_back">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textSize="18sp" />

                <com.joanzapata.iconify.widget.IconTextView
                    android:id="@+id/indicator_description_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:text="{fa-caret-down}"
                    android:textSize="24sp" />
            </RelativeLayout>

            <!--
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:orientation="horizontal">

                        <com.joanzapata.iconify.widget.IconTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="{fa-eye}"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/viewCount"
                            android:padding="5dp"
                            />


                        <com.joanzapata.iconify.widget.IconTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/like_button"
                            android:padding="5dp"
                            android:gravity="center"
                            android:text="{fa-thumbs-up}"
                            android:textSize="20sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/likeCount"
                            android:padding="5dp"
                            />


                        <com.joanzapata.iconify.widget.IconTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:gravity="center"
                            android:text="{fa-comment}"
                            android:textSize="20sp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/commentCount"
                            android:padding="5dp"
                            />

                    </LinearLayout>
            -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingRight="5dp"
                        android:text="{fa-eye}"
                        android:textColor="@color/video_list_icon_color"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/viewCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp" />


                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/like_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingRight="5dp"
                        android:text="{fa-thumbs-up}"
                        android:textColor="@color/video_list_icon_color"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/likeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp" />


                    <com.joanzapata.iconify.widget.IconTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingRight="5dp"
                        android:text="{fa-comment}"
                        android:textColor="@color/video_list_icon_color"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/commentCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp" />

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="13sp"
                android:visibility="gone" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#a1a1a1"
                android:paddingTop="5dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Related Videos"
                android:textColor="@color/toolbar_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#a1a1a1"
                android:paddingTop="5dp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/related_videos_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/topbar_color"
        android:divider="@drawable/divider_vertical"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:showDividers="middle">


        <LinearLayout
            android:id="@+id/like_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/video_player_bottom_text_back"
            android:gravity="center"
            android:orientation="horizontal">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/video_player_bottom_text_back"
                android:gravity="center"
                android:text="@string/icon_like"
                android:textColor="@color/video_player_bottom_icon_color"
                android:textSize="@dimen/video_player_bottom_icon_size" />

            <TextView
                android:id="@+id/like_count_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:textColor="@color/video_player_bottom_icon_color" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/comment_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/video_player_bottom_text_back"
            android:gravity="center"
            android:orientation="horizontal">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/icon_comments"
                android:textColor="@color/video_player_bottom_icon_color"
                android:textSize="@dimen/video_player_bottom_icon_size" />

            <TextView
                android:id="@+id/comment_count_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:textColor="@color/video_player_bottom_icon_color" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/icon_share"
                android:textColor="@color/video_player_bottom_icon_color"
                android:textSize="@dimen/video_player_bottom_icon_size" />
        </LinearLayout>

        <!--<com.facebook.share.widget.LikeView
            android:id="@+id/likeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>-->

        <LinearLayout
            android:id="@+id/favourite_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/video_player_bottom_text_back"
            android:gravity="center"
            android:orientation="horizontal">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/favourite"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/icon_favourite_empty"
                android:textColor="@color/video_player_bottom_icon_color"
                android:textSize="@dimen/video_player_bottom_icon_size" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
